# stream_benchmark

./: CMakeLists.txt  Makefile  Makefile.a64fx  Makefile.cx  README.md  cuda_stream.cu  job.sh  kokkos_stream.cpp  stream.cpp  stream.cu  test.cu
